Fixed type system bug with shift left/right and added tooltips to the node menu

--- a/web/index.css
+++ b/web/index.css
@@ -139,6 +139,11 @@ path.react-flow__edge-path {
     --type-color: var(--material-color);
 }
 
+
+.AnyVectorOrScalar {
+    --type-color: var(--material-color);
+}
+
 .glow {
     box-shadow: 0 0px 7px rgba(255, 255, 255, 0.8);
 }
